--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,10 +24,15 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.1.0'
-    testCompile 'junit:junit:4.12'
 
     //Add Library
+    compile 'com.android.support:appcompat-v7:25.1.0'
     compile 'com.miguelcatalan:materialsearchview:1.4.0'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    testCompile 'junit:junit:4.12'
 }
+
+
+
+
 
