--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,10 @@
         <activity
             android:name=".AddActivity"
             android:label="@string/title_activity_add"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".ContactsActivity"
+            android:label="@string/title_activity_contacts"
             android:theme="@style/AppTheme"></activity>
     </application>
 
