Michael Chambers - Started working on Encryption Implemented net.sqlcipher.database.sqliteDatabase Imported binaries Modified database to a SQLCipher database Application is now encrypted however not being prompted to enter password to access & app crashes

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.1.0'
     compile 'com.miguelcatalan:materialsearchview:1.4.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'net.zetetic:android-database-sqlcipher:3.5.6@aar'
     testCompile 'junit:junit:4.12'
 }
 
